# interstellar

./: .TODO.md  .gitignore  AGENTS.md  Cargo.toml  Gremlin_api.md  LICENSE  README.md  clippy-report.json  gql_api.md  mathexpr  pkg  sonar-project.properties  todo.md
interstellar/: Cargo.toml  README.md  docker-compose.sonarqube.yml
interstellar-cli/: .gitignore  Cargo.toml  README.md
interstellar-cli/docs/: project-brief.md
interstellar-cli/examples/: basic_vertices.gql  basic_vertices.gremlin  edges_and_traversal.gql  edges_and_traversal.gremlin  gremlin_VE_methods.gremlin  import_export.sh  multi_hop.gql  pattern_matching.gql  sample_graph.json  smoke_test.sh  vertex_edge_methods.gremlin
interstellar-cli/specs/: SPEC-gremlin-migration.md  implementation.md
interstellar-cli/src/: error.rs  main.rs
interstellar-cli/src/commands/: create.rs  export.rs  import.rs  mod.rs  query.rs  saved_query.rs  stats.rs
interstellar-cli/src/config/: defaults.rs  mod.rs
interstellar-cli/src/format/: csv.rs  json.rs  mod.rs  table.rs
interstellar-cli/src/gremlin/: mod.rs
interstellar-cli/src/repl/: completer.rs  highlighter.rs  history.rs  mod.rs
interstellar-node/: .gitignore  .npmrc  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
interstellar-node/__test__/: algorithms.spec.ts  graph.spec.ts  predicate.spec.ts  traversal.spec.ts
interstellar-node/examples/: persistent-graph.mjs  social-network.mjs
interstellar-node/src/: anonymous.rs  error.rs  graph.rs  lib.rs  predicate.rs  text_query.rs  traversal.rs  value.rs
interstellar-wasm/: Cargo.toml  README.md
interstellar-wasm/src/: lib.rs
interstellar/benches/: indexes.rs
interstellar/docs/: README.md
interstellar/docs/api/: gql.md  gremlin.md  predicates.md
interstellar/docs/concepts/: concurrency.md
interstellar/docs/getting-started/: examples.md  quick-start.md
interstellar/docs/guides/: algorithms.md  full-text-search.md  geospatial.md  mutations.md  querying.md
interstellar/docs/reference/: error-handling.md  feature-flags.md  value-types.md
interstellar/examples/: algorithms.rs  explain.rs  geo_cities.rs  geo_text_search.rs  graphson.rs  nba.rs  query_storage.rs  quickstart_gql.rs  quickstart_gremlin_script.rs  quickstart_text_search.rs  reactive_geo.rs  reactive_queries.rs  shortest_path_cities.rs  storage.rs
interstellar/examples/fixtures/: nba.graphson.json
interstellar/examples/wasm-node/: README.md  package.json
interstellar/examples/wasm-web/: README.md  index.html  package.json
interstellar/src/: error.rs  kani_proofs.rs  lib.rs  time.rs  value.rs
interstellar/src/algorithms/: common.rs  mod.rs  pathfinding.rs  traversal.rs
interstellar/src/geo/: distance.rs  mod.rs
interstellar/src/gql/: ast.rs  compiler_legacy.rs  ddl.rs  error.rs  grammar.pest  mod.rs  mutation.rs  parser.rs
interstellar/src/graphson/: deserialize.rs  mod.rs  schema_ext.rs  serialize.rs  types.rs
interstellar/src/gremlin/: ast.rs  compiler.rs  error.rs  grammar.pest  mod.rs  parser.rs  tests.rs
interstellar/src/index/: btree.rs  mod.rs  spec.rs  traits.rs  unique.rs
interstellar/src/query/: mod.rs
interstellar/src/schema/: builder.rs  types.rs  validation.rs
interstellar/src/storage/: cow.rs  cow_mmap.rs  events.rs  mod.rs
interstellar/src/traversal/: aggregate.rs  algorithm_steps.rs  anonymous.rs  branch.rs  builder.rs  context.rs  explain.rs  filter.rs  markers.rs  mod.rs  mutation.rs  navigation.rs  pipeline.rs  predicate.rs  reactive.rs  repeat.rs  sideeffect.rs  source.rs  step.rs  streaming.rs  traverser.rs
interstellar/src/wasm/: anonymous.rs  graph.rs  predicate.rs  tests.rs  traversal.rs  types.rs
interstellar/tests/: gql.rs  mutations.rs  reactive.rs  storage.rs  traversal.rs
interstellar/tests/common/: graphs.rs
interstellar/tests/gql/: aggregation.rs  basics.rs  clauses.rs  collections.rs  compiler_coverage.rs  compiler_coverage_extended.rs  compiler_unit.rs  ddl.rs  edge_cases.rs  expressions.rs  match_clause.rs  mutation_coverage.rs  mutations.rs  ordering.rs  parser_coverage.rs  patterns.rs  procedures.rs  snapshots.rs  text_search.rs  where_clause.rs
interstellar/tests/snapshots/: gql_snapshots__error_empty_query.snap  gql_snapshots__error_invalid_literal.snap  gql_snapshots__error_unclosed_paren.snap  gql_snapshots__parse_aggregation_query_snapshot.snap  gql_snapshots__parse_alter_edge_type_add_property_snapshot.snap  gql_snapshots__parse_alter_edge_type_allow_additional_snapshot.snap  gql_snapshots__parse_alter_edge_type_drop_property_snapshot.snap  gql_snapshots__parse_alter_node_type_add_property_snapshot.snap  gql_snapshots__parse_alter_node_type_drop_property_snapshot.snap  gql_snapshots__parse_avg_snapshot.snap  gql_snapshots__parse_case_simple_snapshot.snap  gql_snapshots__parse_ceil_function_snapshot.snap  gql_snapshots__parse_coalesce_snapshot.snap  gql_snapshots__parse_collect_snapshot.snap  gql_snapshots__parse_count_distinct_snapshot.snap  gql_snapshots__parse_count_star_snapshot.snap  gql_snapshots__parse_create_edge_pattern_snapshot.snap  gql_snapshots__parse_create_edge_type_basic_snapshot.snap  gql_snapshots__parse_create_edge_type_different_types_snapshot.snap  gql_snapshots__parse_create_edge_type_multiple_sources_snapshot.snap  gql_snapshots__parse_create_edge_type_with_default_snapshot.snap  gql_snapshots__parse_create_multiple_vertices_snapshot.snap  gql_snapshots__parse_create_node_type_basic_snapshot.snap  gql_snapshots__parse_create_node_type_list_type_snapshot.snap  gql_snapshots__parse_create_vertex_no_properties_snapshot.snap  gql_snapshots__parse_create_with_return_snapshot.snap  gql_snapshots__parse_drop_edge_type_snapshot.snap  gql_snapshots__parse_drop_node_type_snapshot.snap  gql_snapshots__parse_edge_outgoing_snapshot.snap  gql_snapshots__parse_group_by_full_query_snapshot.snap  gql_snapshots__parse_group_by_multiple_snapshot.snap  gql_snapshots__parse_length_function_snapshot.snap  gql_snapshots__parse_match_delete_multiple_vertices_snapshot.snap  gql_snapshots__parse_match_detach_delete_snapshot.snap  (+25 more)
(+789 files in other folders)
