[package]
name = "intersteller"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = ["inmemory"]
inmemory = []
mmap = ["memmap2"]
full-text = ["tantivy"]

[dependencies]
thiserror = "1.0"
hashbrown = "0.14"
smallvec = "1.11"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
roaring = "0.10"
regex = "1.10"
memmap2 = { version = "0.9", optional = true }
tantivy = { version = "0.21", optional = true }
crc32fast = "1.4"
bincode = "1.3"
pest = "2.7"
pest_derive = "2.7"
mathexpr = "0.1.1"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.10"
serde_json = "1.0"
insta = { version = "1.34", features = ["yaml"] }

[[bench]]
name = "traversal"
harness = false

[[bench]]
name = "mmap"
harness = false
required-features = ["mmap"]

[[bench]]
name = "mmap_writes"
harness = false
required-features = ["mmap"]

# Consolidated examples that require mmap feature
[[example]]
name = "nba"
required-features = ["mmap"]

[[example]]
name = "persistence"
required-features = ["mmap"]

[package.metadata.kani]
# Default unwind bound for loops (can be overridden per-proof)
default-unwind = 10
