[package]
name = "interstellar-cli"
version = "0.1.1"
edition = "2021"
description = "Command-line interface for the Interstellar graph database"
license = "MIT"
repository = "https://github.com/wiremine/interstellar"
homepage = "https://github.com/wiremine/interstellar"
readme = "README.md"
keywords = ["graph", "database", "cli", "gql", "gremlin"]
categories = ["command-line-utilities", "database"]
rust-version = "1.75"

[[bin]]
name = "interstellar"
path = "src/main.rs"

[dependencies]
interstellar = { version = "0.1.1", path = "../interstellar", features = ["mmap", "gremlin", "gql", "graphson", "full-text"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = "1"
anyhow = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Phase 2: Interactive REPL
rustyline = { version = "14", features = ["derive"] }
comfy-table = "7"
csv = "1"
colored = "2"

# Phase 3: Gremlin Mode (native parser, no longer using rhai)

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
