[package]
name = "interstellar-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for Interstellar graph database"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interstellar = { path = "../interstellar", features = ["wasm", "graphson"] }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
gql = ["interstellar/gql"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
