[package]
name = "interstellar-wasm"
version = "0.1.1"
edition = "2021"
description = "WebAssembly bindings for Interstellar graph database"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wiremine/interstellar"
homepage = "https://github.com/wiremine/interstellar"
readme = "README.md"
keywords = ["graph", "database", "wasm", "webassembly", "gremlin"]
categories = ["database", "wasm", "web-programming"]
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interstellar = { version = "0.1.1", path = "../interstellar", features = ["wasm", "graphson"] }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
gql = ["interstellar/gql"]
gremlin = ["interstellar/gremlin"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
